--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@ body{margin:0;font-family:'Segoe UI',Arial,Helvetica,sans-serif;background:linea
   animation:fadeScale .6s ease forwards;
 }
 
-.logo{display:flex;justify-content:center;margin-bottom:14px}
-.logo img{width:150px;height:150px}
+.logo{display:flex;justify-content:center;margin-bottom:8px}
+.logo img{
+  width: min(260px, 70%);
+  height: auto;
+}
+
 
 h1{text-align:center;font-size:26px;margin:10px 0 6px 0}
 .sub{text-align:center;font-size:15px;color:var(--gris-texto);margin-bottom:26px}
